Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15978

directory deletion fails on multiple MDS for 64K PAGE_SIZE

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.16.0
    • None
    • 2
    • 9223372036854775807

      Directory deletion fails on multiple MDS for aarch64 64K PAGE_SIZE.

      It fails on many tests which creating directories on multi MDS. E.g. sanity test_1
       
      sudo MDSCOUNT=2 PTLDEBUG=-1  RUNAS_ID=1000 ~/work/lustre-release/lustre/tests/auster   -D ~/log-28  -rv  sanity --only 1
      ...
      == sanity test 1: mkdir; remkdir; rmdir ================== 01:44:19 (1656294259)
      striped dir -i1 -c2 -H fnv_1a_64 /mnt/lustre/d1.sanity
      striped dir -i1 -c2 -H all_char /mnt/lustre/d1.sanity/d2
      mkdir: cannot create directory '/mnt/lustre/d1.sanity/d2': File exists
      /mnt/lustre/d1.sanity/d2 has type dir OK
      rmdir: failed to remove '/mnt/lustre/d1.sanity/d2': Invalid argument
      rmdir: failed to remove '/mnt/lustre/d1.sanity': Directory not empty
      /mnt/lustre/d1.sanity exists
       sanity test_1: @@@@@@ FAIL: d1.sanity was not removed
        Trace dump:
        = /home/centos/work/lustre-release/lustre/tests/test-framework.sh:6408:error()
        = /home/centos/work/lustre-release/lustre/tests/sanity.sh:280:test_1()
        = /home/centos/work/lustre-release/lustre/tests/test-framework.sh:6743:run_one()
        = /home/centos/work/lustre-release/lustre/tests/test-framework.sh:6790:run_one_logged()
        = /home/centos/work/lustre-release/lustre/tests/test-framework.sh:6616:run_test()
        = /home/centos/work/lustre-release/lustre/tests/sanity.sh:282:main()
      Dumping lctl log to /home/centos/log-26/sanity.test_1.*.1656294260.log
      Dumping logs only on local client.
      FAIL 1 (2s)
      resend_count is set to 4 4
      resend_count is set to 4 4
      resend_count is set to 4 4
      resend_count is set to 4 4
      resend_count is set to 4 4
      == sanity test complete, duration 7 sec ================== 01:44:23 (1656294263)
      sanity: FAIL: test_1 d1.sanity was not removed
      rm: cannot remove '/mnt/lustre/d1.sanity': Directory not empty
       sanity test_904: @@@@@@ FAIL: remove sub-test dirs failed
        Trace dump:
        = /home/centos/work/lustre-release/lustre/tests/test-framework.sh:6408:error()
        = /home/centos/work/lustre-release/lustre/tests/test-framework.sh:5892:check_and_cleanup_lustre()
        = /home/centos/work/lustre-release/lustre/tests/sanity.sh:28307:main()
      Dumping lctl log to /home/centos/log-26/sanity.test_904.*.1656294263.log
      Dumping logs only on local client.
      sanity returned 1
      ...

            xinliang Xinliang Liu
            xinliang Xinliang Liu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: